k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proj3-defectsense
  labels:
    app: proj3-defectsense
    version: "1.0.0"
spec:
  type: NodePort
  selector:
    app: proj3-defectsense
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31905
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 300
